Forgot to change website url after forking

--- a/package/translate/nl_NL.po
+++ b/package/translate/nl_NL.po
@@ -6,8 +6,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: simpleweather\n"
-"Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applet-dailyforecast\n"
-"POT-Creation-Date: 2020-01-20 12:24-0500\n"
+"Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applet-"
+"condensedweather\n"
+"POT-Creation-Date: 2020-01-21 11:54-0500\n"
 "PO-Revision-Date: 2019-11-12 14:27+0100\n"
 "Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
 "Language-Team: Dutch <vistausss@outlook.com>\n"
