--- a/package/translate/zh_CN.po
+++ b/package/translate/zh_CN.po
@@ -87,15 +87,12 @@ msgstr "<b>版本：</b> %1"
 #: ../contents/ui/lib/ConfigFontFamily.qml
 msgctxt "Use default font"
 msgid "Default"
-msgstr ""
+msgstr "默认"
 
 #: ../contents/ui/main.qml
 msgid "Refresh"
-msgstr ""
+msgstr "刷新"
 
 #: ../contents/ui/WeatherData.qml
 msgid "Wind:"
 msgstr ""
-
-#~ msgid "%1°"
-#~ msgstr "%1°"
