--- a/package/translate/nl_NL.po
+++ b/package/translate/nl_NL.po
@@ -9,14 +9,14 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applet-"
 "condensedweather\n"
 "POT-Creation-Date: 2020-04-15 13:26-0400\n"
-"PO-Revision-Date: 2019-11-12 14:27+0100\n"
+"PO-Revision-Date: 2020-04-23 17:16+0200\n"
 "Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
 "Language-Team: Dutch <vistausss@outlook.com>\n"
 "Language: nl_NL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.4\n"
+"X-Generator: Poedit 2.3\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../contents/config/config.qml
@@ -25,7 +25,7 @@ msgstr "Algemeen"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Show weather details"
-msgstr ""
+msgstr "Weerinformatie tonen"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Show weather warnings"
@@ -49,7 +49,7 @@ msgstr "Lettertype:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Forecast:"
-msgstr ""
+msgstr "Weersvoorspelling:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgctxt "font size suffix"
@@ -58,7 +58,7 @@ msgstr "pt"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Temp:"
-msgstr ""
+msgstr "Temp.:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Date:"
@@ -70,7 +70,7 @@ msgstr "Min./Max. temp.:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Details:"
-msgstr ""
+msgstr "Informatie:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Text:"
@@ -82,7 +82,7 @@ msgstr "Contour:"
 
 #: ../contents/ui/DetailsView.qml
 msgid "Updated at %1"
-msgstr ""
+msgstr "Bijgewerkt om %1"
 
 #: ../contents/ui/lib/AppletVersion.qml
 msgid "<b>Version:</b> %1"
@@ -95,7 +95,7 @@ msgstr "Standaard"
 
 #: ../contents/ui/lib/weather/WeatherData.qml
 msgid "Wind:"
-msgstr ""
+msgstr "Wind:"
 
 #: ../contents/ui/main.qml
 msgid "Refresh"
