--- a/package/translate/template.pot
+++ b/package/translate/template.pot
@@ -6,16 +6,20 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: condensedweather \n"
+"Project-Id-Version: condensedweather\n"
 "Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applet-condensedweather\n"
-"POT-Creation-Date: 2020-05-05 23:47-0400\n"
+"POT-Creation-Date: 2020-10-05 21:32-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+#: ../metadata.desktop
+msgid "Condensed Weather"
+msgstr ""
 
 #: ../contents/config/config.qml
 msgid "General"
