--- a/package/translate/ru.po
+++ b/package/translate/ru.po
@@ -25,11 +25,11 @@ msgstr "Главная"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Show weather details"
-msgstr ""
+msgstr "Показывать детальную погоду"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Show weather warnings"
-msgstr ""
+msgstr "Показывать погодные предупреждения"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Desktop Widget: Show background"
@@ -37,11 +37,11 @@ msgstr "Виджет рабочего стола: показать фон"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Days Visible:"
-msgstr ""
+msgstr "Кол-во отображаемых дней:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "0 = Show all available data"
-msgstr ""
+msgstr "0 = Показывать все доступные дни"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Font Family:"
@@ -49,7 +49,7 @@ msgstr ""
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Forecast:"
-msgstr ""
+msgstr "Прогноз"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgctxt "font size suffix"
@@ -58,31 +58,31 @@ msgstr ""
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Temp:"
-msgstr ""
+msgstr "Температура:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Date:"
-msgstr ""
+msgstr "Дата:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Min/Max Temp:"
-msgstr ""
+msgstr "Min/Max температура:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Details:"
-msgstr ""
+msgstr "Детали:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Text:"
-msgstr ""
+msgstr "Текст:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Outline:"
-msgstr ""
+msgstr "Контур:"
 
 #: ../contents/ui/DetailsView.qml
 msgid "Updated at %1"
-msgstr ""
+msgstr "Обновлено в %1"
 
 #: ../contents/ui/lib/AppletVersion.qml
 msgid "<b>Version:</b> %1"
@@ -95,7 +95,7 @@ msgstr ""
 
 #: ../contents/ui/libweather/WeatherData.qml
 msgid "Wind:"
-msgstr ""
+msgstr "Ветер:"
 
 #: ../contents/ui/main.qml
 msgid "Refresh"
