--- a/package/translate/hr.po
+++ b/package/translate/hr.po
@@ -1,22 +1,21 @@
-# Translation of simpleweather in es
-# Copyright (C) 2019
+# Translation of simpleweather in Croatian
+# Copyright (C) 2020
 # This file is distributed under the same license as the simpleweather package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Vladimir Mikulic <vladimir.mikulic2@gmail.com>, 2020.
+#
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: simpleweather\n"
-"Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applet-"
-"condensedweather\n"
+"Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applet-condensedweather\n"
 "POT-Creation-Date: 2022-02-01 01:59-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Last-Translator: Vladimir Mikulic <vladimir.mikulic2@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: hr_HR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 19.04.3\n"
 
 #: ../metadata.desktop
 msgid "Condensed Weather"
@@ -28,7 +27,7 @@ msgstr ""
 
 #: ../contents/config/config.qml
 msgid "General"
-msgstr "General"
+msgstr "Općenito"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Show weather details"
@@ -36,11 +35,11 @@ msgstr ""
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Show weather warnings"
-msgstr "Mostrar alertas climatológicas"
+msgstr "Prikaži vremenska upozorenja"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Desktop Widget: Show background"
-msgstr "Widget de escritorio: mostrar fondo"
+msgstr "Desktop Widget: Prikaži pozadinu"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Days Visible:"
@@ -52,7 +51,7 @@ msgstr ""
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Font Family:"
-msgstr "Familia tipográfica:"
+msgstr "Font:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Forecast:"
@@ -61,7 +60,7 @@ msgstr ""
 #: ../contents/ui/config/ConfigGeneral.qml
 msgctxt "font size suffix"
 msgid "pt"
-msgstr "pt"
+msgstr "Jedinica za veličinu fonta"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Temp:"
@@ -73,7 +72,7 @@ msgstr ""
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Min/Max Temp:"
-msgstr "Temperatura mín/máx:"
+msgstr "Min/Max Temperatura:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Details:"
@@ -81,11 +80,11 @@ msgstr ""
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Text:"
-msgstr "Texto:"
+msgstr "Tekst:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Outline:"
-msgstr "Contorno:"
+msgstr "Kratak pregled:"
 
 #: ../contents/ui/DetailsView.qml
 msgid "Updated at %1"
@@ -94,12 +93,12 @@ msgstr ""
 #: ../contents/ui/libconfig/FontFamily.qml
 msgctxt "Use default font"
 msgid "Default"
-msgstr "Por defecto"
+msgstr "Koristi zadani font"
 
 #: ../contents/ui/libweather/WeatherData.qml
 msgid "Wind:"
-msgstr ""
+msgstr "Vjetar:"
 
 #: ../contents/ui/main.qml
 msgid "Refresh"
-msgstr "Refrescar"
+msgstr "Osvježi"
