--- a/package/translate/sl.po
+++ b/package/translate/sl.po
@@ -1,22 +1,22 @@
-# Translation of simpleweather in es
-# Copyright (C) 2019
+# Translation of simpleweather in Slovenian
+# Copyright (C) 2020
 # This file is distributed under the same license as the simpleweather package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Ugo Ugowsky <ugowsky@gmail.com>, 2021.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: simpleweather\n"
 "Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applet-"
 "condensedweather\n"
 "POT-Creation-Date: 2022-02-01 01:59-0500\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-07-29 15:06+0200\n"
+"Last-Translator: Ugo Ugowsky <ugowsky@gmail.com>\n"
+"Language-Team: Slovenian <lugos-slo@lugos.si>\n"
+"Language: sl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 19.04.3\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../metadata.desktop
 msgid "Condensed Weather"
@@ -28,7 +28,7 @@ msgstr ""
 
 #: ../contents/config/config.qml
 msgid "General"
-msgstr "General"
+msgstr "Splošno"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Show weather details"
@@ -36,11 +36,11 @@ msgstr ""
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Show weather warnings"
-msgstr "Mostrar alertas climatológicas"
+msgstr "Prikaži vremenska opozorila"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Desktop Widget: Show background"
-msgstr "Widget de escritorio: mostrar fondo"
+msgstr "Namizni gradnik: prikaži ozadje"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Days Visible:"
@@ -52,7 +52,7 @@ msgstr ""
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Font Family:"
-msgstr "Familia tipográfica:"
+msgstr "Družina pisav"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Forecast:"
@@ -61,7 +61,7 @@ msgstr ""
 #: ../contents/ui/config/ConfigGeneral.qml
 msgctxt "font size suffix"
 msgid "pt"
-msgstr "pt"
+msgstr "točk"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Temp:"
@@ -73,7 +73,7 @@ msgstr ""
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Min/Max Temp:"
-msgstr "Temperatura mín/máx:"
+msgstr "min/max temperatura:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Details:"
@@ -81,11 +81,11 @@ msgstr ""
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Text:"
-msgstr "Texto:"
+msgstr "Besedilo:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Outline:"
-msgstr "Contorno:"
+msgstr "Obroba:"
 
 #: ../contents/ui/DetailsView.qml
 msgid "Updated at %1"
@@ -94,12 +94,12 @@ msgstr ""
 #: ../contents/ui/libconfig/FontFamily.qml
 msgctxt "Use default font"
 msgid "Default"
-msgstr "Por defecto"
+msgstr "Ponastavi"
 
 #: ../contents/ui/libweather/WeatherData.qml
 msgid "Wind:"
-msgstr ""
+msgstr "Veter:"
 
 #: ../contents/ui/main.qml
 msgid "Refresh"
-msgstr "Refrescar"
+msgstr "Osveži"
