--- a/package/translate/nl.po
+++ b/package/translate/nl.po
@@ -9,23 +9,23 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applet-"
 "condensedweather\n"
 "POT-Creation-Date: 2022-02-01 01:59-0500\n"
-"PO-Revision-Date: 2020-04-23 17:16+0200\n"
-"Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
+"PO-Revision-Date: 2022-02-14 13:34+0100\n"
+"Last-Translator: Heimen Stoffels <vistausss@fastmail.com>\n"
 "Language-Team: Dutch <vistausss@outlook.com>\n"
 "Language: nl_NL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.3\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #: ../metadata.desktop
 msgid "Condensed Weather"
-msgstr ""
+msgstr "Eenvoudige weersvoorspelling"
 
 #: ../metadata.desktop
 msgid "Current and Daily Weather Forecast"
-msgstr ""
+msgstr "Huidig en dagelijks weerbericht"
 
 #: ../contents/config/config.qml
 msgid "General"
